--- a/crates/kd-encoder/Cargo.toml
+++ b/crates/kd-encoder/Cargo.toml
@@ -9,9 +9,10 @@ tracing.workspace = true
 thiserror.workspace = true
 bytes.workspace = true
 serde.workspace = true
+openh264 = { version = "0.6", optional = true }
 
 [features]
-default = []
+default = ["openh264"]
 ffmpeg = ["dep:ffmpeg-next"]
 x264 = []
 
