--- a/crates/kd-network/Cargo.toml
+++ b/crates/kd-network/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-trait.workspace = true
+libc.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 thiserror.workspace = true
