--- a/crates/kd-server/example.toml
+++ b/crates/kd-server/example.toml
@@ -25,8 +25,8 @@ port = 8080
 bind_address = "0.0.0.0"
 max_packet_size = 1400
 
-[capture]
-monitor_index = 0
+[capture.window]
+window_name = "Brave"
 
 [input]
 keyboard_enabled = true
