--- a/crates/kd-server/config.toml
+++ b/crates/kd-server/config.toml
@@ -25,8 +25,11 @@ port = 8080
 bind_address = "0.0.0.0"
 max_packet_size = 1400
 
-[capture.window]
-window_name = "Brave"
+[capture]
+mode = { window = "Brave" }
+width = 1920
+height = 1080
+fps = 60
 
 [input]
 keyboard_enabled = true
